Ajuste formulario reserva

--- a/Reservas.html
+++ b/Reservas.html
@@ -41,14 +41,13 @@
 
         <form action="">
             <h2>RESERVAS</h2>
-            <input type="text" name="nombre" placeholder="Nombre">
-            <input type="text" name="apellidos" placeholder="Apellidos">
+            <input type="text" name="nombre" placeholder="Nombre completo">
             <input type="text" name="correo" placeholder="Email">
             <input type="text" name="telefono" placeholder="Teléfono">
             <input type="text" name="origen" placeholder="origen">
             <input type="text" name="destino" placeholder="Destino">
-            <input type="text" name="fechaInicio" placeholder="Ida dd/mm/aa">
-            <input type="text" name="fechaRetorno" placeholder="Vuelta dd/mm/aa">
+            <input type="date" name="fechaInicio" placeholder="Ida dd/mm/aa">
+            <input type="date" name="fechaRetorno" placeholder="Vuelta dd/mm/aa">
             <input type="button" value="RESERVAR" id="boton">
         </form>
     
