--- a/Contacto.html
+++ b/Contacto.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="fontello.css">
     <title>Document</title>
-    
+    <link rel="alternate" type="application/rss+xml" title="Word Festival" href="feed/canal_word_festival.rss" />
 </head>
 
 
@@ -59,6 +59,10 @@
                 <p id="cp">Carrer Vic 4, CP. 25005 Lleida/Lleida Catalunya Espanya</p>
                 <p id="cp">Tel. 973 85 90 30</p>
                 <p id="cp">Email: atencion_clientes@agenciajvlleifa.es</p>
+            </div>
+
+            <div class="rss">
+                <a type="application/rss+xml" href="feed/canal_word_festival.rss"><img src="Imagen/rss.png" alt="" /></a>
             </div>
     
         </div>
