ingresando codigo atom

--- a/Contacto.html
+++ b/Contacto.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="fontello.css">
     <title>Document</title>
     <link rel="alternate" type="application/rss+xml" title="Word Festival" href="feed/canal_word_festival.rss" />
+    <link rel="alternate" type="application/atom+xml" title="Word Festival" href="feed/canal_word_festival.atom" />
 </head>
 
 
