--- a/Contacto.html
+++ b/Contacto.html
@@ -64,6 +64,9 @@
 
             <div class="rss">
                 <a type="application/rss+xml" href="feed/canal_word_festival.rss"><img src="Imagen/rss.png" alt="" /></a>
+                    <p>RSS</p>
+                <a type="application/rss+xml" href="feed/canal_word_festival.rss"><img src="Imagen/rss.png" alt="" /></a>
+                    <p>ATOM</p>
             </div>
     
         </div>
