--- a/Contacto.html
+++ b/Contacto.html
@@ -65,7 +65,7 @@
             <div class="rss">
                 <a type="application/rss+xml" href="feed/canal_word_festival.rss"><img src="Imagen/rss.png" alt="" /></a>
                     <p>RSS</p>
-                <a type="application/rss+xml" href="feed/canal_word_festival.rss"><img src="Imagen/rss.png" alt="" /></a>
+                <a type="application/atom+xml" href="feed/canal_word_festival.atom"><img src="Imagen/rss.png" alt="" /></a>
                     <p>ATOM</p>
             </div>
     
